@@ -454,7 +454,7 @@ DECLARE_INTERFACE_(IMarshal,IUnknown)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetUnmarshalClass) (THIS_ REFIID,DWORD,PVOID,DWORD,CLSID) PURE;
+	STDMETHOD(GetUnmarshalClass) (THIS_ REFIID,DWORD,PVOID,DWORD,CLSID*) PURE;
 	STDMETHOD(GetMarshalSizeMax) (THIS_ REFIID,DWORD,PVOID,DWORD,PDWORD) PURE;
 	STDMETHOD(MarshalInterface) (THIS_ REFIID,DWORD,DWORD) PURE;
 	STDMETHOD(UnmarshalInterface) (THIS_ IStream*,void**) PURE;
@@ -532,7 +532,7 @@ DECLARE_INTERFACE_(IPersist,IUnknown)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetClassID)(THIS_ LPCLSID) PURE;
+	STDMETHOD(GetClassID)(THIS_ CLSID*) PURE;
 };
 
 EXTERN_C const IID IID_IPersistStream;
@@ -543,7 +543,7 @@ DECLARE_INTERFACE_(IPersistStream,IPersist)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetClassID)(THIS_ CLSID*) PURE;
+	STDMETHOD(GetClassID)(THIS_ LPCLSID) PURE;
 	STDMETHOD(IsDirty)(THIS) PURE;
 	STDMETHOD(Load)(THIS_ IStream*) PURE;
 	STDMETHOD(Save)(THIS_ IStream*,BOOL) PURE;
@@ -595,7 +595,7 @@ DECLARE_INTERFACE_(IMoniker,IPersistStream)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetClassID)(THIS_ CLSID*) PURE;
+	STDMETHOD(GetClassID)(THIS_ LPCLSID) PURE;
 	STDMETHOD(IsDirty)(THIS) PURE;
 	STDMETHOD(Load)(THIS_ IStream*) PURE;
 	STDMETHOD(Save)(THIS_ IStream*,BOOL) PURE;
@@ -625,7 +625,7 @@ DECLARE_INTERFACE_(IPersistStorage,IPersist)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetClassID)(THIS_ CLSID) PURE;
+	STDMETHOD(GetClassID)(THIS_ CLSID*) PURE;
 	STDMETHOD(IsDirty)(THIS) PURE;
 	STDMETHOD(InitNew)(THIS_ LPSTORAGE) PURE;
 	STDMETHOD(Load)(THIS_ LPSTORAGE) PURE;
@@ -642,7 +642,7 @@ DECLARE_INTERFACE_(IPersistFile,IPersist)
 	STDMETHOD(QueryInterface)(THIS_ REFIID,PVOID*) PURE;
 	STDMETHOD_(ULONG,AddRef)(THIS) PURE;
 	STDMETHOD_(ULONG,Release)(THIS) PURE;
-	STDMETHOD(GetClassID)(THIS_ CLSID) PURE;
+	STDMETHOD(GetClassID)(THIS_ CLSID*) PURE;
 	STDMETHOD(IsDirty)(THIS) PURE;
 	STDMETHOD(Load)(THIS_ LPCOLESTR,DWORD) PURE;
 	STDMETHOD(Save)(THIS_ LPCOLESTR,BOOL) PURE;
